[package]
name = "sleepy_webhooks"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.7.0"
anyhow = "1.0.86"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.3", features = ["postgres", "chrono", "runtime-tokio", "uuid"] }
tokio = { version = "1.38.0", features = ["full"] }
futures-util = "0.3.30"
chrono = "0.4.38"
rayon = "1.10.0"
reqwest = "0.12.4"
env_logger = "0.11.3"
log = "0.4.21"
clap = { version = "4.5.7", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
